grammar.js
    source_file: $ => repeat($._definition),

    // ---------------------------------------------------------------------
    // Top-level definitions  (prolang.y `def`, line ~9790)
    // ---------------------------------------------------------------------

    _definition: $ => choice(
      $.function_definition,
      $.global_var,
      $.struct_definition,
      $.inheritance,
      $.default_visibility,
      $.preproc_include,
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_undef,
      $.preproc_pragma,
      $.preproc_if,
      $.preproc_ifdef,
      $.preproc_call,
    ),

    // ---------------------------------------------------------------------
    // Preprocessor (handled in lex.c, but we expose a tree-sitter-c-style
    // approximation so editors can navigate). Adapted from tree-sitter-c.
    // ---------------------------------------------------------------------

    preproc_def: $ => seq(
      preprocessor('define'),
      field('name', $.identifier),
      field('value', optional($.preproc_arg)),
      token.immediate(/\r?\n/),
    ),

    preproc_arg: $ => token(prec(-1, repeat1(/.|\\\r?\n/))),

    ...preprocIf('', $ => $._definition),
    ...preprocIf('_in_statement', $ => $._statement),
    // For aggregate literals (`({ ... })`, `'({ ... })`, struct
    // literals) and call argument lists. The slot is an expression with
    // an optional trailing comma, e.g. same shape as a regular slot so the
    // branch contents are interchangeable with inline elements.
    ...preprocIf('_in_aggregate', $ => $._aggregate_slot),

    _aggregate_slot: $ => choice(
      seq($._expression, ','),
      $._expression,
    ),

    // A separate flavor of preproc for mapping literals: same `#if/#elif/
    // #else/#endif` shape, but the wrapped slot is a `mapping_entry`
    // (`"k": v[,]`) rather than a bare expression. The dunemud corpus
    // frequently `#if`-wraps whole mapping entries (obj/soul2.c:756,
    // obj/cmds/player/calc.c:434, etc.). Surfacing this as its own
    // family — instead of widening `_aggregate_slot` — avoids the
    // `_expression` vs `mapping_entry` ambiguity on a leading identifier
    // that the comment above used to warn about: `mapping_entry`'s `:`
    // half is optional, so adding it to `_aggregate_slot` would make
    // every bare expression also match as a key-only `mapping_entry`.
    ...preprocIf('_in_mapping', $ => $._mapping_slot),

    _preproc_expression: $ => choice(
      $.identifier,
      $.number_literal,
      $.string_literal,
      $.preproc_defined,
      alias($.preproc_unary_expression, $.unary_expression),
      alias($.preproc_binary_expression, $.binary_expression),
      alias($.preproc_parenthesized_expression, $.parenthesized_expression),
      alias($.preproc_call_expression, $.function_call),
    ),

    function_definition: $ => seq(
      optional($.async_modifier),
      repeat($.type_modifier),
      field('type', optional($._basic_type)),
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      field('body', choice($.block, ';')),
    ),

    parameter_list: $ => seq(
      '(',
      choice(
        commaSep($.parameter),
        'void',
      ),
      ')',
    ),

    // prolang.y `new_arg_name` (line 11176): `non_void_type L_IDENTIFIER
    // opt_default_value`. The basic-type half of `non_void_type` is
    // optional (defaults to mixed). See `t-language/ti-types.c` for
    // typeless params. `varargs` is technically part of
    // `type_modifier_list` (the only modifier the driver lets through);
    // we surface it as its own slot since real usage is always a single
    // `varargs` prefix.
    parameter: $ => seq(
      optional('varargs'),
      field('type', optional($.non_void_type)),
      field('name', $.identifier),
      optional(seq('=', field('default', $._expression))),
    ),

    // ---------------------------------------------------------------------
    // Globals: `int x, *y, z = 1;`: type then comma-separated names, each
    // with optional `*`-prefix (legacy pointer-array decl) and initializer.
    // ---------------------------------------------------------------------

    global_var: $ => seq(
      repeat($.type_modifier),
      field('type', $._basic_type),
      commaSep1($._global_declarator),
      ';',
    ),

    _global_declarator: $ => seq(
      repeat('*'),
      field('name', $.identifier),
      optional(seq('=', field('value', $._expression))),
    ),

    // ---------------------------------------------------------------------
    // Structs: prolang.y `struct_decl` (line 10434) covers forward-decl
    // (`struct foo;`), full def (`struct foo { ... }`), and base-struct
    // extension (`struct foo (bar) { ... }`).
    // ---------------------------------------------------------------------

    _basic_type: $ => choice(
      $.non_void_type,
      'void',
    ),

    non_void_type: $ => sep1('|', $._single_non_void_type),

    _single_non_void_type: $ => choice(
      $._atomic_type,
      prec.left(seq($._single_non_void_type, '*')),
    ),

    block: $ => seq('{', repeat($._statement), '}'),

    _statement: $ => choice(
      $.expression_statement,
      $.local_var_decl,
      $.return_statement,
      $.if_statement,
      $.while_statement,
      $.do_statement,
      $.for_statement,
      $.foreach_statement,
      $.switch_statement,
      $.break_statement,
      $.continue_statement,
      $.block,
      ';',
      $.preproc_if_in_statement,
      $.preproc_ifdef_in_statement,
      // Leaf preprocessor directives mid-function. `#pragma` flips a
      // parser-state flag in the LDMud driver; we don't honor the
      // semantic effect, but it has to *parse*. Real-world LPC also
      // has stray `#define` / `#undef` / `#include` mid-function.
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_undef,
      $.preproc_pragma,
      $.preproc_include,
    ),

    expression_statement: $ => seq($._comma_expression, ';'),

    local_var_decl: $ => seq(
      field('type', $._basic_type),
      commaSep1($._local_declarator),
      ';',
    ),

    _local_declarator: $ => seq(
      repeat('*'),
      field('name', $.identifier),
      optional(seq('=', field('value', $._expression))),
    ),

    break_statement: $ => seq('break', ';'),
    if_statement: $ => prec.right(seq(
      'if',
      '(',
      field('condition', $._comma_expression),
      ')',
      field('consequence', $._statement),
      optional(seq('else', field('alternative', $._statement))),
    )),

    for_statement: $ => seq(
      'for', '(',
      field('init', optional($._for_init)),
      ';',
      field('condition', optional($._comma_expression)),
      ';',
      field('update', optional($._comma_expression)),
      ')',
      field('body', $._statement),
    ),

    // prolang.y `for_init_expr` (line 12182) → `comma_expr_decl` (line
    // 12194), where each comma-separated element is either an `expr0`
    // or a `local_name_lvalue ('=' expr0)?` typed declaration. Each
    // element carries its own type, so `for(int i = 0, int j; ...; ...)`
    // is valid LPC (surfaced by the dunemud lib).
    //
    // The single-type form `for(type d1, d2; ...)` is a dedicated shape
    // — when every declarator shares a type, the tree mirrors a
    // `local_var_decl` for parity. The mixed form admits each item as
    // either an expression or a typed `for_init_decl`.
    _for_init: $ => choice(
      // Dynamic prec: when the for-init can be parsed *both* as a
      // single-type list of declarators AND as the mixed-type list, we
      // prefer the single-type shape (cleaner tree, matches the
      // existing corpus). `prec.dynamic` resolves at parse time so the
      // mixed-type form still wins when it's the only valid parse
      // (e.g. the second item has its own type or is a bare expression).
      prec.dynamic(1, seq(
        field('type', $._basic_type),
        commaSep1($._local_declarator),
      )),
      commaSep1($._for_init_item),
    ),

    _comma_expression: $ => prec.left(PREC.COMMA, commaSep1($._expression)),

    _expression: $ => choice(
      $.assignment_expression,
      $.conditional_expression,
      $.binary_expression,
      $.unary_expression,
      $.update_expression,
      $.cast_expression,
      $.decl_cast_expression,
      $.lvalue_ref_expression,
      $._expr_primary,
    ),

    assignment_expression: $ => prec.right(PREC.ASSIGNMENT, seq(
      field('left', $._expression),
      field('operator', $.assignment_operator),
      field('right', $._expression),
    )),

    assignment_operator: $ => choice(
      '=', '*=', '/=', '%=', '+=', '-=',
      '<<=', '>>=', '>>>=',
      '&=', '&&=', '^=', '|=', '||=',
    ),

    binary_expression: $ => {
      const table = [
        ['||',  PREC.LOGICAL_OR],
        ['&&',  PREC.LOGICAL_AND],
        ['|',   PREC.INCLUSIVE_OR],
        ['^',   PREC.EXCLUSIVE_OR],
        ['&',   PREC.BITWISE_AND],
        ['==',  PREC.EQUAL],
        ['!=',  PREC.EQUAL],
        ['in',  PREC.EQUAL],
        ['<',   PREC.RELATIONAL],
        ['<=',  PREC.RELATIONAL],
        ['>',   PREC.RELATIONAL],
        ['>=',  PREC.RELATIONAL],
        ['<<',  PREC.SHIFT],
        ['>>',  PREC.SHIFT],
        ['>>>', PREC.SHIFT],
        ['+',   PREC.ADD],
        ['-',   PREC.ADD],
        ['*',   PREC.MULTIPLY],
        ['/',   PREC.MULTIPLY],
        ['%',   PREC.MULTIPLY],
      ];
      return choice(...table.map(([op, p]) =>
        prec.left(p, seq(
          field('left', $._expression),
          field('operator', op),
          field('right', $._expression),
        ))));
    },

    unary_expression: $ => prec.right(PREC.UNARY, seq(
      field('operator', choice('!', '~', '-', '+')),
      field('argument', $._expression),
    )),

    update_expression: $ => {
      const arg = field('argument', $._expression);
      const op = field('operator', choice('--', '++'));
      return choice(
        prec.right(PREC.UNARY, seq(op, arg)),
        prec.left(PREC.POSTFIX, seq(arg, op)),
      );
    },

    // prolang.y `cast` (line 11074): `'(' single_basic_non_void_type ')'`.
    // `void` is not accepted; a bare union must wrap in `<...>`, e.g.
    // `(<int|string>)x`. We type the field as `non_void_type` (which is a
    // single type or a `|`-union), slightly looser than prolang.y, but
    // the union-without-`<...>` case is a semantic concern, not syntax.
    function_call: $ => prec(PREC.CALL, seq(
      field('function', choice(
        $.identifier,
        $.scoped_function_name,
      )),
      field('arguments', $.argument_list),
    )),

    argument_list: $ => seq(
      '(',
      aggregateBody(seq($._expression, optional('...')), $),
      ')',
    ),

    // Higher precedence than `member_access` so that `obj->fun(...)`
    // shifts `(` into the call rather than reducing to a bare member
    // access. (Surfaced once `_aggregate_slot` allowed bare-expression
    // slots without a trailing comma to disambiguate.)
    call_other: $ => prec(PREC.CALL, seq(
      field('object', $._expression),
      field('operator', choice('->', '.')),
      field('function', $._member_or_lookup),
      field('arguments', $.argument_list),
    )),

    _member_or_lookup: $ => choice(
      $.identifier,
      $.string_literal,
      $.concatenated_string,
      seq('(', $._expression, ')'),
    ),

    // ----- Indexing & ranges -----

    subscript_expression: $ => prec(PREC.POSTFIX, seq(
      field('object', $._expression),
      '[',
      optional($._index_anchor),
      field('index', $._expression),
      optional(seq(',', optional($._index_anchor), field('index2', $._expression))),
      ']',
    )),

    // `x[a..b]`: single-key range subscript.
    // `x[k, a..b]` : two-key map range subscript: takes key `k` then a
    // range over the value column. prolang.y has the full suite of
    // anchor combos at lines 16760+; we model it permissively as an
    // optional `key,` prefix.
    range_expression: $ => prec(PREC.POSTFIX, seq(
      field('object', $._expression),
      '[',
      optional(seq(field('key', $._expression), ',')),
      optional(seq(optional($._index_anchor), field('lower', $._expression))),
      '..',
      optional(seq(optional($._index_anchor), field('upper', $._expression))),
      ']',
    )),

    // `<` = count from end, `>` = explicit from start (rare).
    _index_anchor: $ => choice('<', '>'),

    // ----- Catch / await / yield -----

    // prolang.y `catch` (line 18655) + `opt_catch_mods` (line 18755).
    // The modifier list is introduced by `;` and modifiers are
    // comma-separated. `reserve`/`limit` take an expression, `nolog`/
    // `publish` don't.
    catch_expression: $ => seq(
      'catch',
      '(',
      $._comma_expression,
      optional(seq(';', commaSep1($.catch_modifier))),
      ')',
    ),

    // prolang.y `opt_catch_modifier` (line 18803). LDMud parses every
    // modifier as a bare identifier and validates names in the action;
    // we bake the four documented names in directly. `reserve <expr>`
    // and `limit <expr>` take an int expression; `nolog`/`publish` are
    // bare.
    catch_modifier: $ => choice(
      'nolog',
      'publish',
      seq('reserve', $._expression),
      seq('limit', $._expression),
    ),

    // prolang.y coroutine_call (line 18578).
    //   await(coro)            await(coro, expr)
    //   yield()  yield(value)  yield(value, coro)
    array_literal: $ => seq(
      '(', '{',
      aggregateBody($._expression, $),
      '}', ')',
    ),

    // `'({ ... })` — quoted aggregate (lex.c ~6223). One or more `'`
    // glued to `({` opens the form; the quote count is preserved at
    // runtime but doesn't change parse shape. Distinct from `#'({` which
    // is the AGGREGATE operator-closure (lex.c symbol_operator:1648).
    identifier: $ => /[\p{L}_$][\p{L}\p{N}_$]*/u,

    // lex.c ~line 6428: int (decimal/0x/0o/0b) or float (1.0, .5, 1e10).
    // Trailing-dot floats (`4.`) are deliberately rejected as a token.
    // lex.c only treats `.` as a float separator when not followed by
    // another `.`, and we can't express that lookahead in a token regex.
    // Forbidding `4.` lets `1..5` lex correctly as `1`, `..`, `5`.
    number_literal: $ => {
      const decimal = /[0-9]+/;
      return token(choice(
        // hex, octal, binary
        seq(/0[xX]/, /[0-9a-fA-F]+/),
        seq(/0[oO]/, /[0-7]+/),
        seq(/0[bB]/, /[01]+/),
        // float forms (require digits both sides of `.`, OR leading dot, OR
        // exponent without dot)
        seq(decimal, '.', decimal, optional(/[eE][-+]?[0-9]+/)),
        seq('.', decimal, optional(/[eE][-+]?[0-9]+/)),
        seq(decimal, /[eE][-+]?[0-9]+/),
        // plain decimal
        decimal,
      ));
    },

    string_literal: $ => seq(
      '"',
      repeat(choice(
        token.immediate(prec(1, /[^\\"\n]+/)),
        $.escape_sequence,
      )),
      '"',
    ),

    // Adjacent string literals concatenate at compile time. We also
    // accept LDMud's predefined `__FOO__` macros here, since they expand
    // to strings before parsing and the resulting concatenation is a
    // common idiom (`__DIR__ ".tmp.c"`, `__MASTER_OBJECT__ ".gc.log"`).
    // The function-like form `__PATH__(n)"x"` is common in the dunemud
    // corpus — admitted as the first or subsequent slot.
