test/corpus/binary_expressions.txt
================================================================================
Binary Expression Test
================================================================================

int x = 1 + 1;

int x = 1 - x;

int x = 1 * x;

int x = 1 / x;

int x = 1 % x;

int x = 1 || x;

int x = 1 && x;

int x = x | 1;

int x = x ^ 1;

int x = x & 1;

int x = x == 1;

int x = x != 1;

int x = 1 > x;

int x = x >= 1;

int x = x <= 1;

int x = 1 < x;

int x = 1 << x;

int x = 1 >> x;

int x = 1 >>> x;

int x = 4 in ({ 1, 2, 3, 4 });

--------------------------------------------------------------------------------

(source_file
  (global_var
    (non_void_type)
    (identifier)
    (binary_expression
      (number_literal)
      (number_literal)))
  (global_var
    (non_void_type)
    (identifier)
    (binary_expression
      (number_literal)
      (identifier)))
  (global_var
    (non_void_type)
    (identifier)
    (binary_expression
      (number_literal)
      (identifier)))
  (global_var
    (non_void_type)
    (identifier)
    (binary_expression
      (number_literal)
      (identifier)))
  (global_var
    (non_void_type)
    (identifier)
    (binary_expression
      (number_literal)
      (identifier)))
  (global_var
    (non_void_type)
    (identifier)
    (binary_expression
      (number_literal)
      (identifier)))
  (global_var
    (non_void_type)
    (identifier)
    (binary_expression
      (number_literal)
      (identifier)))
  (global_var
    (non_void_type)
    (identifier)
    (binary_expression
      (identifier)
      (number_literal)))
  (global_var
    (non_void_type)
    (identifier)
    (binary_expression
      (identifier)
      (number_literal)))
  (global_var
    (non_void_type)
    (identifier)
    (binary_expression
      (identifier)
      (number_literal)))
  (global_var
    (non_void_type)
    (identifier)
    (binary_expression
      (identifier)
      (number_literal)))
  (global_var
    (non_void_type)
    (identifier)
    (binary_expression
      (identifier)
      (number_literal)))
  (global_var
    (non_void_type)
    (identifier)
    (binary_expression
      (number_literal)
      (identifier)))
  (global_var
    (non_void_type)
    (identifier)
    (binary_expression
      (identifier)
      (number_literal)))
  (global_var
    (non_void_type)
    (identifier)
    (binary_expression
      (identifier)
      (number_literal)))
  (global_var
    (non_void_type)
    (identifier)
    (binary_expression
      (number_literal)
      (identifier)))
  (global_var
    (non_void_type)
    (identifier)
    (binary_expression
      (number_literal)
      (identifier)))
  (global_var
    (non_void_type)
    (identifier)
    (binary_expression
      (number_literal)
      (identifier)))
  (global_var
    (non_void_type)
    (identifier)
    (binary_expression
      (number_literal)
      (identifier)))
  (global_var
    (non_void_type)
    (identifier)
    (binary_expression
      (number_literal)
      (array_literal
        (number_literal)
        (number_literal)
        (number_literal)
        (number_literal)))))
