test/corpus/catch_modifiers.txt
================================================================================
Catch Modifiers
================================================================================

x() {
  object obj;
  string err;
  err = catch(obj = clone_object("/foo/bar/baz"); nolog);
  err = catch(obj = clone_object("/foo/bar/baz"); publish);
  err = catch(obj = clone_object("/foo/bar/baz"); reserve 999999);
  err = catch(obj = clone_object("/foo/bar/baz"); reserve foo());
  err = catch(obj = clone_object("/foo/bar/baz"); publish, nolog);
  err = catch(obj = clone_object("/foo/bar/baz"); publish, reserve 420, nolog);
  err = catch(obj = clone_object("/foo/bar/baz"); limit 1000);
  err = catch(obj = clone_object("/foo/bar/baz"); reserve 1000, limit 4000);
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (local_var_decl
        (non_void_type)
        (identifier))
      (local_var_decl
        (non_void_type)
        (identifier))
      (expression_statement
        (assignment_expression
          (identifier)
          (assignment_operator)
          (catch_expression
            (assignment_expression
              (identifier)
              (assignment_operator)
              (function_call
                (identifier)
                (argument_list
                  (string_literal))))
            (catch_modifier))))
      (expression_statement
        (assignment_expression
          (identifier)
          (assignment_operator)
          (catch_expression
            (assignment_expression
              (identifier)
              (assignment_operator)
              (function_call
                (identifier)
                (argument_list
                  (string_literal))))
            (catch_modifier))))
      (expression_statement
        (assignment_expression
          (identifier)
          (assignment_operator)
          (catch_expression
            (assignment_expression
              (identifier)
              (assignment_operator)
              (function_call
                (identifier)
                (argument_list
                  (string_literal))))
            (catch_modifier
              (number_literal)))))
      (expression_statement
        (assignment_expression
          (identifier)
          (assignment_operator)
          (catch_expression
            (assignment_expression
              (identifier)
              (assignment_operator)
              (function_call
                (identifier)
                (argument_list
                  (string_literal))))
            (catch_modifier
              (function_call
                (identifier)
                (argument_list))))))
      (expression_statement
        (assignment_expression
          (identifier)
          (assignment_operator)
          (catch_expression
            (assignment_expression
              (identifier)
              (assignment_operator)
              (function_call
                (identifier)
                (argument_list
                  (string_literal))))
            (catch_modifier)
            (catch_modifier))))
      (expression_statement
        (assignment_expression
          (identifier)
          (assignment_operator)
          (catch_expression
            (assignment_expression
              (identifier)
              (assignment_operator)
              (function_call
                (identifier)
                (argument_list
                  (string_literal))))
            (catch_modifier)
            (catch_modifier
              (number_literal))
            (catch_modifier))))
      (expression_statement
        (assignment_expression
          (identifier)
          (assignment_operator)
          (catch_expression
            (assignment_expression
              (identifier)
              (assignment_operator)
              (function_call
                (identifier)
                (argument_list
                  (string_literal))))
            (catch_modifier
              (number_literal)))))
      (expression_statement
        (assignment_expression
          (identifier)
          (assignment_operator)
          (catch_expression
            (assignment_expression
              (identifier)
              (assignment_operator)
              (function_call
                (identifier)
                (argument_list
                  (string_literal))))
            (catch_modifier
              (number_literal))
            (catch_modifier
              (number_literal))))))))
