test/corpus/simple_catch2.txt
================================================================================
Simple Catch 2
================================================================================

#define MAX_LOG_SIZE 50000

x() {
  string file_name;
  int *st;
  if (sizeof(st = get_dir(file_name,2) ) && st[0] > MAX_LOG_SIZE) {
    catch(rename(file_name, file_name + ".old")); /* No panic if failure */
  }
}

--------------------------------------------------------------------------------

(source_file
  (preproc_def
    (identifier)
    (preproc_arg))
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (local_var_decl
        (non_void_type)
        (identifier))
      (local_var_decl
        (non_void_type)
        (identifier))
      (if_statement
        (binary_expression
          (function_call
            (identifier)
            (argument_list
              (assignment_expression
                (identifier)
                (assignment_operator)
                (function_call
                  (identifier)
                  (argument_list
                    (identifier)
                    (number_literal))))))
          (binary_expression
            (subscript_expression
              (identifier)
              (number_literal))
            (identifier)))
        (block
          (expression_statement
            (catch_expression
              (function_call
                (identifier)
                (argument_list
                  (identifier)
                  (binary_expression
                    (identifier)
                    (string_literal))))))
          (comment))))))
